# GlyphsApp

./: .gitignore  pyproject.toml
lib/GlyphsApp/: GSApplication.py  GSApplication.pyi  GSFont.py  GSFont.pyi  GSLayer.py  __init__.py  __init__.pyi
