[tool.poetry]
name = "glyphsapp"
version = "0.1.1"
description = ""
authors = ["Rafał Buchner <rafal.buchner@gmail.com>"]
readme = "README.md"
packages = [{ include = "lib/GlyphsApp" }]

[tool.poetry.dependencies]
python = "^3.11"
pyobjc = "^10.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
